# advent-of-code-2024

./: README.md  pyproject.toml  setup.sh
advent/01/: 01.md  01.py
advent/02/: 02-bad.py  02.md  02.py
advent/03/: 03.py
advent/04/: 04.py
advent/05/: 05.py  05b.py
